[package]
name = "taskr"
version = "0.1.0"
authors = ["grayson <grayson@returntocorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "2.33.1" }
rusqlite = { version = "0.21.0", features = ["bundled"] }
prettytable-rs = "^0.8"