[package]
name = "taskli"
version = "0.0.2"
authors = ["minusworld <locrian.vii@gmail.com>"]
edition = "2018"
description = "A simple CLI tool for managing task lists."
repository = "https://github.com/minusworld/taskli"
keywords = ["cli", "task", "task management", "todo", "task list"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "2.33.1" }
rusqlite = { version = "0.21.0", features = ["bundled"] }
prettytable-rs = "^0.8"
dirs = "3.0.1"